# leaf

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  Makefile  README.md  README.zh.md  rust-toolchain.toml  test_config_process_name.rs
docs/: mptp_architecture.md  (+1 more)
leaf/: Cargo.toml  build.rs
leaf-bin/: Cargo.toml
leaf-bin/src/: main.rs
leaf-cli/: Cargo.toml
leaf-cli/src/: main.rs
leaf-ffi/: Cargo.toml  build.rs
leaf-ffi/src/: lib.rs  logger.rs
leaf-mobile/: Cargo.toml  build.rs  cbindgen.toml  wrapper.h
leaf-mobile/src/: bindings.rs  lib.rs  logger.rs
leaf-plugins/shadowsocks/: Cargo.toml
leaf-plugins/shadowsocks/src/: lib.rs
leaf-uniffi/: Cargo.toml
leaf-uniffi/.cargo/: config.toml
leaf-uniffi/src/: lib.rs
leaf/src/: lib.rs  session.rs  sys.rs  util.rs  winsys.rs
leaf/src/app/: dispatcher.rs  dns_client.rs  fake_dns.rs  handler_manager.rs  healthcheck.rs  logger.rs  mod.rs  nat_manager.rs  process_finder.rs  router.rs  stat_manager.rs
leaf/src/app/api/: api_server.rs  mod.rs
leaf/src/app/dns/: client.rs
leaf/src/app/dns/client/: tests.rs  types.rs
leaf/src/app/inbound/: cat_listener.rs  manager.rs  mod.rs  network_listener.rs  tproxy_listener.rs  tracked_stream.rs  tun_listener.rs
leaf/src/app/inbound/tunio_wrapper/: codec.rs  mod.rs  rust_tun_wrapper.rs  win_route.rs
leaf/src/app/outbound/: manager.rs  mod.rs  plugin.rs  selector.rs  selector_cache.proto  selector_cache.rs
leaf/src/common/: cmd_linux.rs  cmd_macos.rs  cmd_windows.rs  crypto.rs  dns_client.rs  dns_sniff.rs  fake_dns.rs  io.rs  log.rs  mod.rs  mutex.rs  net.rs  resolver.rs  sniff.rs  stream.rs  tls.rs
leaf/src/config/: common.rs  external_rule.rs  geosite.proto  geosite.rs  mod.rs
leaf/src/config/conf/: config.rs
leaf/src/config/internal/: config.proto  config.rs
leaf/src/config/json/: config.rs  mod.rs
leaf/src/config/json/tests/: mod.rs  test_config.rs  test_dns.rs
leaf/src/mobile/: bindings.rs  callback.rs  logger.rs  mod.rs  wrapper.h
leaf/src/option/: ios.rs  mod.rs  unix.rs  windows.rs
leaf/src/proxy/: datagram.rs  handler.rs  inbound.rs  mod.rs  outbound.rs  stream.rs
leaf/src/proxy/amux/: mod.rs
leaf/src/proxy/amux/inbound/: mod.rs  stream.rs  tcp.rs
leaf/src/proxy/amux/outbound/: mod.rs  stream.rs  tcp.rs
leaf/src/proxy/chain/: mod.rs  tcp.rs  udp.rs
leaf/src/proxy/chain/inbound/: datagram.rs  mod.rs  stream.rs  tcp.rs  udp.rs
leaf/src/proxy/chain/outbound/: datagram.rs  mod.rs  stream.rs  tcp.rs  udp.rs
leaf/src/proxy/direct/: datagram.rs  mod.rs  stream.rs  tcp.rs  udp.rs
leaf/src/proxy/drop/: datagram.rs  mod.rs  stream.rs  tcp.rs  udp.rs
leaf/src/proxy/failover/: datagram.rs  mod.rs  stream.rs  tcp.rs  udp.rs
leaf/src/proxy/h2/: mod.rs  tcp.rs  udp.rs
leaf/src/proxy/hc/: mod.rs
leaf/src/proxy/hc/inbound/: mod.rs  stream.rs
leaf/src/proxy/http/: inbound.rs  mod.rs
leaf/src/proxy/http/inbound/: mod.rs  stream.rs  tcp.rs
leaf/src/proxy/mptp/: mod.rs
leaf/src/proxy/mptp/inbound/: stream.rs
leaf/src/proxy/mptp/mptp_conn/: datagram.rs  mod.rs  protocol.rs  stream.rs
leaf/src/proxy/mptp/outbound/: stream.rs
leaf/src/proxy/nf/: mod.rs
leaf/src/proxy/nf/inbound/: datagram.rs  mod.rs  stream.rs
leaf/src/proxy/null/: mod.rs
leaf/src/proxy/null/outbound/: tcp.rs  udp.rs
leaf/src/proxy/obfs/: http.rs  mod.rs  tls.rs
leaf/src/proxy/obfs/tls/: packet.rs  template.rs
leaf/src/proxy/quic/: mod.rs
leaf/src/proxy/quic/inbound/: datagram.rs  mod.rs  udp.rs
leaf/src/proxy/quic/outbound/: mod.rs  stream.rs  stream.rsm  tcp.rs
leaf/src/proxy/random/: mod.rs  tcp.rs  udp.rs
leaf/src/proxy/reality/: mod.rs  stream.rs
leaf/src/proxy/reality/outbound/: mod.rs  stream.rs
leaf/src/proxy/redirect/: datagram.rs  mod.rs  stream.rs  tcp.rs  udp.rs
leaf/src/proxy/retry/: mod.rs  tcp.rs  udp.rs
leaf/src/proxy/rr/: tcp.rs  udp.rs
leaf/src/proxy/select/: datagram.rs  mod.rs  stream.rs  tcp.rs  udp.rs
leaf/src/proxy/shadowsocks/: crypto.rs  mod.rs  protocol.rs  shadow.rs  tcp.rs  udp.rs
leaf/src/proxy/shadowsocks/inbound/: datagram.rs  mod.rs  stream.rs  tcp.rs  udp.rs
leaf/src/proxy/shadowsocks/outbound/: datagram.rs  mod.rs  stream.rs  tcp.rs  udp.rs
leaf/src/proxy/simplesocks/: mod.rs
leaf/src/proxy/simplesocks/inbound/: datagram.rs  stream.rs
leaf/src/proxy/socks/: mod.rs
leaf/src/proxy/socks/inbound/: datagram.rs  mod.rs  stream.rs  tcp.rs  udp.rs
leaf/src/proxy/socks/outbound/: datagram.rs  mod.rs  stream.rs  tcp.rs  udp.rs
leaf/src/proxy/stat/: mod.rs  tcp.rs  udp.rs
leaf/src/proxy/static/: datagram.rs  mod.rs  stream.rs  tcp.rs  udp.rs
leaf/src/proxy/tls/: mod.rs  stream.rs  tcp.rs  udp.rs
leaf/src/proxy/tls/inbound/: mod.rs  stream.rs  tcp.rs
leaf/src/proxy/tls/outbound/: mod.rs  skip.rs  stream.rs  tcp.rs
leaf/src/proxy/trojan/: mod.rs  tcp.rs  udp.rs
leaf/src/proxy/tryall/: datagram.rs  mod.rs  stream.rs  tcp.rs  udp.rs
leaf/src/proxy/tun/: inbound.rs  mod.rs
leaf/src/proxy/vless/: datagram.rs  mod.rs  stream.rs  tcp.rs  udp.rs  vless.rs
leaf/src/proxy/vmess/: crypto.rs  kdf.rs  mod.rs  protocol.rs  stream.rs  tcp.rs  udp.rs  vmess.rs
leaf/src/proxy/ws/: mod.rs  stream.rs  tcp.rs  udp.rs  ws.rs
leaf/tests/: common.rs  test.rs  test_amux_trojan.rs  test_direct.rs  test_failover.rs  test_in_chain_1.rs  test_mptp.rs  test_out_chain_1.rs  test_out_chain_10.rs  test_out_chain_2.rs  test_out_chain_3.rs  test_out_chain_4.rs  test_out_chain_5.rs  test_out_chain_6.rs  test_out_chain_7.rs  test_out_chain_8.rs  test_out_chain_9.rs  test_proxy_chain.rs  test_proxy_chain_1.rs  test_proxy_chain_2.rs  test_proxy_chain_3.rs  test_proxy_chain_4.rs  test_proxy_chain_5.rs  test_proxy_chain_6.rs  test_proxy_chain_7.rs  test_proxy_chain_8.rs  test_quic_trojan.rs  test_random.rs  test_retry.rs  test_rr.rs  test_shadowsocks.rs  test_socks.rs  test_static.rs  test_tcp_half_close.rs  test_tcp_half_close_amux.rs  test_tcp_half_close_quic.rs  test_tcp_half_close_shadowsocks.rs  test_tls_trojan.rs  test_trojan.rs  test_tryall.rs  (+2 more)
tun2socks-bin/: Cargo.toml
tun2socks-bin/src/: main.rs
(+53 files in other folders)
