[package]
name = "leaf-bin"
version = "0.2.14"
authors = ["eycorsican <eric.y.corsican@gmail.com>"]
edition = "2018"

[[bin]]
name = "leaf"
path = "src/main.rs"

[features]
default = [
    "default-ring",
]

default-ring = [
    "leaf/default-ring",
]

default-openssl = [
    "leaf/default-openssl",
]

[dependencies]
leaf = { path = "../leaf", default-features = false, optional = true }
clap = { version = "3.0.0-beta.1", default-features = false, features =["std"] }
log = { version = "0.4", features = ["std"] }
fern = { version = "0.6", features = ["colored"] }
tokio = { version = "1", features = ["signal", "rt", "rt-multi-thread"] }
futures = "0.3"
