[package]
name = "leaf-bin"
version = "0.2.14"
authors = ["eycorsican <eric.y.corsican@gmail.com>"]
edition = "2018"

[[bin]]
name = "leaf"
path = "src/main.rs"

[features]
default = [
    "default-ring",
]

default-ring = [
    "leaf/default-ring",
    "leaf/ctrlc",
    "auto-reload",
]

default-openssl = [
    "leaf/default-openssl",
    "leaf/ctrlc",
    "auto-reload",
]

auto-reload = ["leaf/auto-reload"]

[dependencies]
leaf = { path = "../leaf", default-features = false, optional = true }
clap = { version = "3.0.0-beta.1", default-features = false, features =["std"] }
tokio = { version = "1", features = ["rt"] }
