[package]
name = "leaf-bin"
version = "0.8.2"
authors = ["eycorsican <eric.y.corsican@gmail.com>"]
edition = "2021"

[[bin]]
name = "leaf"
path = "src/main.rs"

[features]
default = ["default-ring"]

default-ring = ["leaf/default-ring", "leaf/ctrlc", "auto-reload"]

default-openssl = ["leaf/default-openssl", "leaf/ctrlc", "auto-reload"]

auto-reload = ["leaf/auto-reload"]

[dependencies]
leaf = { path = "../leaf", default-features = false, optional = true }
tokio = { version = "1", features = ["rt"] }
argh = "0.1"
