[package]
name = "leaf-cli"
version = "0.13.0"
authors = ["eycorsican <eric.y.corsican@gmail.com>"]
edition = "2021"

[[bin]]
name = "leaf"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt"] }
argh = "0.1"

[target.'cfg(not(windows))'.dependencies.leaf]
path = "../leaf"
default-features = false
features = [
  "default-ring",
  "ctrlc",
  "auto-reload"
]

[target.'cfg(windows)'.dependencies.leaf]
path = "../leaf"
default-features = false
features = [
  "default-ring",
  "ctrlc",
  "auto-reload",
  "inbound-nf",
  "rule-process-name"
]
