[package]
name = "leaf-ffi"
version = "0.1.0"
authors = ["eycorsican <eric.y.corsican@gmail.com>"]
edition = "2018"

[lib]
name = "leaf"
path = "src/lib.rs"
crate-type = ["staticlib", "dylib"]

[features]
default = [
    "default-ring",
]

default-aws-lc= [
    "leaf/default-aws-lc",
]

default-ring = [
    "leaf/default-ring",
]

default-openssl = [
    "leaf/default-openssl",
]

outbound-quic = [
    "leaf/outbound-quic",
]

auto-reload = ["leaf/auto-reload"]

[dependencies]
leaf = { path = "../leaf", default-features = false, optional = true }
