[package]
name = "leaf-mobile"
version = "0.1.0"
authors = ["eycorsican <eric.y.corsican@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "leaf"
path = "src/lib.rs"
crate-type = ["staticlib"]

[features]
default = [
    "leaf/all-configs",
    "leaf/all-endpoints",
    "leaf/ring-aead",
    "leaf/rustls-tls",
]

[dependencies]
leaf = { path = "../leaf", default-features = false, optional = true }
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
memchr = "2"
bytes = "1"
tokio = { version = "1", features = ["macros"] }
futures = "0.3"

[build-dependencies]
bindgen = "0.57"
