[package]
name = "leaf"
version = "0.1.2"
authors = ["eycorsican <eric.y.corsican@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
name = "leaf"
path = "src/lib.rs"

[features]
default = [
    "default-ring"
]

default-ring = [
    "all-configs",
    "all-endpoints",
    "ring-aead",
    "rustls-tls",
    # quinn supports only rustls as tls backend for now
    "inbound-quic",
    "outbound-quic",
    "api",
    "stat",
    # "plugin",
]

default-openssl = [
    "all-configs",
    "all-endpoints",
    "openssl-aead",
    "openssl-tls",
]

# Grouping all features
all-configs = [
    "config-conf",
    "config-json",
]
all-endpoints = [
    # inbounds
    "inbound-chain",
    "inbound-amux",
    # "inbound-quic",
    "inbound-ws",
    "inbound-tls",
    "inbound-trojan",
    "inbound-http",
    "inbound-shadowsocks",
    "inbound-socks",
    "inbound-tun",
    "inbound-cat",
    # outbounds
    "outbound-direct",
    "outbound-drop",
    "outbound-redirect",
    "outbound-shadowsocks",
    "outbound-obfs",
    "outbound-socks",
    "outbound-trojan",
    "outbound-tls",
    "outbound-ws",
    "outbound-amux",
    "outbound-vmess",
    # "outbound-quic",
    "outbound-failover",
    "outbound-static",
    "outbound-tryall",
    "outbound-chain",
    # "outbound-select",
]

# Ring-related
ring-aead = ["ring"]
rustls-tls = ["tokio-rustls", "webpki-roots", "rustls-pemfile"]

# Openssl-related, for platforms not supported by ring, such as mips
openssl-aead = ["openssl"]
openssl-tls = ["openssl", "tokio-openssl", "openssl-probe"]

# Config formats
config-conf = ["regex"]
config-json = ["serde", "serde_derive", "serde_json"]

# Outbounds
outbound-direct = []
outbound-drop = []
outbound-redirect = []
outbound-shadowsocks = ["hkdf", "sha-1", "md-5", "tokio-util"]
outbound-obfs = ["base64", "memchr"]
outbound-socks = ["async-socks5"]
outbound-trojan = ["sha2", "hex"]
outbound-tls = []
outbound-ws = ["tungstenite", "tokio-tungstenite", "url", "http"]
outbound-failover = ["lru_time_cache"]
outbound-static= []
outbound-tryall = []
outbound-chain = []
outbound-amux= ["tokio-util"]
outbound-quic = ["quinn", "rustls", "webpki-roots"]
outbound-select = []
outbound-vmess = ["lz_fnv", "cfb-mode", "hmac", "aes", "sha3", "digest", "uuid", "md-5", "tokio-util"]

# Inbounds
inbound-trojan = ["sha2", "hex"]
inbound-shadowsocks = ["hkdf", "sha-1", "md-5", "tokio-util"]
inbound-socks = []
inbound-http = ["http"]
inbound-tun = ["tun", "netstack-lwip"]
inbound-ws = ["tungstenite", "tokio-tungstenite", "url", "http"]
inbound-amux = ["tokio-util"]
inbound-quic = ["quinn", "rustls", "webpki-roots"]
inbound-tls = []
inbound-chain = []
inbound-cat = ["tokio/io-std"]

plugin = []
stat = []
api = ["warp"]
auto-reload = ["notify"]
ctrlc = ["tokio/signal"]

[dependencies]
# Common
tokio = { version = "1", features = ["sync", "io-util", "net", "time", "rt", "rt-multi-thread"] }
futures-util = "0.3"
protobuf = "3.2"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
byteorder = "1"
bytes = "1"
lazy_static = "1.4.0"
anyhow = "1.0"
rand = "0.8"
socket2 = "0.4"
directories = "4.0"
async-ffi = "0.2"
libloading = "0.7"
async-recursion = "1.0"
parking_lot = "0.12"

# config-json
serde_json = { version = "1.0", features = ["raw_value"], optional = true }
serde_derive = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true }

# config-conf
regex = { version = "1", default-features = false, features = ["std", "perf"], optional = true }

# Openssl
openssl = { version = "0.10", features = ["vendored"], optional = true }

# Ring
ring = { version = "0.16", optional = true }

# Router
maxminddb = { version = "0.21", features = ["mmap"] }
memmap2 = "0.3"
cidr = { version = "0.2" }

# DNS
trust-dns-proto = { version = "0.20", default-features = false }
lru = "0.7"

# Logging
log = { version = "0.4", features = ["std"] }
log4rs = "1.2"
chrono = "0.4"
colored = "2.0"

# TLS/rustls/QUIC
tokio-rustls = { version = "0.23", features = ["dangerous_configuration"], optional = true }
webpki-roots = { version = "0.22", optional = true }
rustls-pemfile = { version = "1.0.2", optional = true }

# TLS/openssl
openssl-probe = { version = "0.1", optional = true }
tokio-openssl = { version = "0.6", optional = true }

# WebSocket
tungstenite = { version = "0.16", default-features = false, optional = true }
tokio-tungstenite = { version = "0.16", optional = true }

# WebSocket
url = { version = "2.2", optional = true }
http = { version = "0.2", optional = true }

# SOCKS outbound
async-socks5 = { version = "0.5", optional = true }

# Shadowsocks
hkdf = { version = "0.11", optional = true }
md-5 = { version = "0.10", optional = true }
sha-1 = { version = "0.9", optional = true }

# Obfs
base64 = { version = "0.21", optional = true }
memchr = { version = "2", optional = true }

# Trojan
sha2 = { version = "0.9", optional = true }
hex = { version = "0.4", optional = true }

# VMess
lz_fnv = { version = "0.1", optional = true }
cfb-mode = { version = "0.8", optional = true }
hmac = { version = "0.12", optional = true }
aes = { version = "0.8", optional = true }
sha3 = { version = "0.10", optional = true }
digest = { version = "0.10", optional = true }
uuid = { version = "1", optional = true }

# Failover
lru_time_cache = { version = "0.11", optional = true }

# amux
tokio-util = { version = "0.6", default-features = false, features = ["io"], optional = true }

# QUIC
quinn = { version = "0.8", default-features = false, features = ["tls-rustls"], optional = true }
rustls = { version = "0.20", optional = true }

# API
warp = { version = "0.3", default-features = false, optional = true }

# Auto reload
notify = { version = "5.0.0-pre.13", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

# TUN
[target.'cfg(any(target_os = "ios", target_os = "android", target_os = "macos", target_os = "linux"))'.dependencies]
tun = { git = "https://github.com/eycorsican/rust-tun.git", branch = "fork", features = ["async"], optional = true }
netstack-lwip = { git = "https://github.com/eycorsican/netstack-lwip.git", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
pnet_datalink = { version = "0.28", package = "pnet_datalink" }
libc = "0.2"

# Used in mobile logger
[target.'cfg(any(target_os = "ios", target_os = "macos", target_os = "android"))'.dependencies]
memchr = { version = "2" }

[dev-dependencies]
rcgen = "0.8"
sha2 = "0.9"
tokio = { version = "1", features = ["fs", "sync", "io-util", "net", "time", "rt", "rt-multi-thread"] }

[build-dependencies]
cc = "1.0"
bindgen = "0.59"
protobuf-codegen = "3.2"
