[package]
name = "leaf"
version = "0.1.2"
authors = ["eycorsican <eric.y.corsican@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
name = "leaf"
path = "src/lib.rs"

[features]
default = [
    "default-ring"
]

default-ring = [
    "all-configs",
    "all-endpoints",
    "ring-aead",
    "rustls-tls",
    "rustls-tls-ring",
    "quinn-ring",
    "api",
]

default-aws-lc = [
    "all-configs",
    "all-endpoints",
    "aws-lc-aead",
    "rustls-tls",
    "rustls-tls-aws-lc",
    "quinn-aws-lc",
    "api",
]

default-openssl = [
    "all-configs",
    "all-endpoints",
    "openssl-aead",
    "openssl-tls",
    "quinn-ring",
]

rustls-tls-aws-lc = ["tokio-rustls/aws_lc_rs", "rustls/aws_lc_rs"]
rustls-tls-ring = ["tokio-rustls/ring", "rustls/ring"]

quinn-ring = ["quinn/rustls-ring", "quinn/runtime-tokio"]
quinn-aws-lc = ["quinn/rustls-aws-lc-rs", "quinn/runtime-tokio"]

# Grouping all features
all-configs = [
    "config-conf",
    "config-json",
]
all-endpoints = [
    # inbounds
    "inbound-chain",
    "inbound-amux",
    "inbound-quic",
    "inbound-ws",
    "inbound-tls",
    "inbound-trojan",
    "inbound-mptp",
    "inbound-http",
    "inbound-hc",
    "inbound-shadowsocks",
    "inbound-socks",
    "inbound-tun",
    "inbound-cat",
    # outbounds
    "outbound-direct",
    "outbound-drop",
    "outbound-redirect",
    "outbound-shadowsocks",
    "outbound-obfs",
    "outbound-socks",
    "outbound-trojan",
    "outbound-tls",
    "outbound-ws",
    "outbound-amux",
    "outbound-vmess",
    "outbound-quic",
    "outbound-failover",
    "outbound-static",
    "outbound-tryall",
    "outbound-chain",
    "outbound-vless",
    "outbound-reality",
    "outbound-mptp",
    # "outbound-select",
]

# Ring-related
ring-aead = ["ring"]
aws-lc-aead = ["aws-lc-rs"]
rustls-tls = ["tokio-rustls", "webpki-roots", "rustls-pemfile", "rustls"]

# Openssl-related, for platforms not supported by ring, such as mips
openssl-aead = ["openssl"]
openssl-tls = ["openssl", "tokio-openssl", "openssl-probe"]

# Config formats
config-conf = ["regex"]
config-json = ["serde", "serde_derive", "serde_json"]

# Router rules
rule-process-name = ["regex"]

# Outbounds
outbound-direct = []
outbound-drop = []
outbound-redirect = []
outbound-shadowsocks = ["hkdf", "sha-1", "md-5", "percent-encoding", "tokio-util"]
outbound-obfs = ["base64", "memchr"]
outbound-socks = ["async-socks5"]
outbound-trojan = ["sha2", "hex"]
outbound-tls = []
outbound-ws = ["tungstenite", "tokio-tungstenite", "url", "http"]
outbound-failover = ["lru_time_cache"]
outbound-static= []
outbound-tryall = []
outbound-chain = []
outbound-vless = ["hex"]
outbound-reality = ["reality", "reality-rustls", "webpki-roots", "rustls-pemfile", "hex", "base64"]
outbound-amux= ["tokio-util"]
outbound-quic = ["rustls", "webpki-roots-old", "rustls-pemfile-old"]
outbound-mptp = []
outbound-select = ["directories", "axum/query"]
outbound-vmess = ["lz_fnv", "cfb-mode", "hmac", "sha2", "aes", "aes-gcm", "sha3", "digest", "md-5", "tokio-util", "byteorder", "crc32fast"]

# Inbounds
inbound-trojan = ["sha2", "hex"]
inbound-mptp = []
inbound-shadowsocks = ["hkdf", "sha-1", "md-5", "tokio-util"]
inbound-socks = []
inbound-http = ["http"]
inbound-hc = []
inbound-tun = ["tun", "netstack-lwip", "netstack-smoltcp", "pnet_datalink"]
inbound-ws = ["tungstenite", "tokio-tungstenite", "url", "http"]
inbound-amux = ["tokio-util"]
inbound-quic = ["rustls", "rustls-pemfile-old"]
inbound-tls = []
inbound-chain = []
inbound-cat = ["tokio/io-std"]
inbound-nf = ["libloading"]

plugin = ["async-ffi", "libloading"]
api = ["axum"]
auto-reload = ["notify"]
ctrlc = ["tokio/signal"]

[dependencies]
# Common
tokio = { version = "1", features = ["sync", "io-util", "net", "time", "rt", "rt-multi-thread"] }
protobuf = "3.6"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
bytes = "1"
lazy_static = "1.5"
anyhow = "1.0"
rand = "0.8"
socket2 = "0.5"
async-recursion = "1.1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }

# DNS
hickory-proto = { version = "0.24", default-features = false }
lru = "0.12"

# Logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
chrono = "0.4"

# Router
maxminddb = { version = "0.24", features = ["mmap"] }
memmap2 = "0.9"
cidr = "0.2"
regex = { version = "1.11", optional = true }

# outbound-select
directories = { version = "4.0", optional = true }

# plugin
async-ffi = { version = "0.2", optional = true }
libloading = { version = "0.7", optional = true }

# config-json
serde_json = { version = "1.0", features = ["raw_value"], optional = true }
serde_derive = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true }

# config-conf

openssl = { version = "0.10", features = ["vendored"], optional = true }

ring = { version = "0.17", optional = true }

aws-lc-rs = { version = "1.7", features = ["bindgen"], optional = true }

# TLS/rustls/QUIC
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12"], optional = true }
webpki-roots = { version = "0.26", optional = true }
webpki-roots-old = { package = "webpki-roots", version = "0.25", optional = true }
rustls-pemfile = { version = "2.1", optional = true }
rustls-pemfile-old = { package = "rustls-pemfile", version = "1.0", optional = true }

# TLS/openssl
openssl-probe = { version = "0.1", optional = true }
tokio-openssl = { version = "0.6", optional = true }

# WebSocket
tungstenite = { version = "0.24", default-features = false, optional = true }
tokio-tungstenite = { version = "0.24", optional = true }

# WebSocket
url = { version = "2.5", optional = true }
http = { version = "1.1", optional = true }

# SOCKS outbound
async-socks5 = { version = "0.6", optional = true }

# Shadowsocks
hkdf = { version = "0.12", optional = true }
md-5 = { version = "0.10", optional = true }
sha-1 = { version = "0.10", optional = true }
percent-encoding = { version = "2.3", optional = true }

# Obfs
base64 = { version = "0.22", optional = true }
memchr = { version = "2", optional = true }

# Trojan
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }

# VMess
lz_fnv = { version = "0.1", optional = true }
cfb-mode = { version = "0.8", optional = true }
hmac = { version = "0.12", optional = true }
aes = { version = "0.8", optional = true }
aes-gcm = { version = "0.10", optional = true }
sha3 = { version = "0.10", optional = true }
digest = { version = "0.10", optional = true }
byteorder = { version = "1", optional = true }
crc32fast = { version = "1", optional = true }

# Failover
lru_time_cache = { version = "0.11", optional = true }

# amux
tokio-util = { version = "0.7", default-features = false, features = ["io", "codec", "compat"], optional = true }

# QUIC
quinn = { version = "0.11", default-features = false, optional = true }
rustls = { version = "0.23", default-features = false, features = ["std"], optional = true }

# Reality
reality = { git = "https://github.com/eycorsican/reality-rs.git", optional = true }
reality-rustls = { package = "rustls", git = "https://github.com/eycorsican/reality-rustls.git", branch = "reality-rebase-0.23.36", optional = true, default-features = false, features = ["ring", "std", "tls12", "logging"] }

# API
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "json"], optional = true }

# Auto reload
notify = { version = "6", optional = true }

# TUN
tun = { version = "0.7", features = ["async"], optional = true  }
netstack-lwip = { git = "https://github.com/eycorsican/netstack-lwip", rev = "4cc3162", optional = true }
netstack-smoltcp = { git = "https://github.com/eycorsican/netstack-smoltcp", branch = "pr-16-initialize-unfilled", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
ipconfig = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
pnet_datalink = { version = "0.34", package = "pnet_datalink", optional = true }
libc = "0.2"

# Used in mobile logger
[target.'cfg(any(target_os = "ios", target_os = "macos", target_os = "android"))'.dependencies]
memchr = { version = "2" }

[dev-dependencies]
rcgen = "0.13"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "sync", "io-util", "net", "time", "rt", "rt-multi-thread"] }

[build-dependencies]
cc = "1.0"
bindgen = "0.69"
protobuf-codegen = "=3.6.0"
protoc-bin-vendored = "3.2"
