[package]
name = "tun2socks-bin"
version = "0.1.0"
authors = ["eycorsican <eric.y.corsican@gmail.com>"]
edition = "2018"

[[bin]]
name = "tun2socks"
path = "src/main.rs"

[dependencies]
leaf = { path = "../leaf", default-features=false, features=["outbound-socks"] }
clap = { version = "3.0.0-beta.1", default-features = false, features =["std"] }
log = { version = "0.4", features = ["std"] }
env_logger = "0.8"
tokio = { version = "0.2", features = ["signal"] }
futures = "0.3"
protobuf = "2.17"
